<resources>
    <string name="app_name">MeetStrangers</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim uid est laborum.</string>

    <string name="map">Map</string>
    <string name="messages">Messages</string>
    <string name="users">Users</string>
    <string name="friends">Friends</string>
    <string name="strangers">Strangers</string>
    <string name="groups">Groups</string>
    <string name="share_location">Share Location</string>
    <string name="write_message">Write a message...</string>

    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>

    <string name="tab_location">Location</string>
    <string name="tab_friends">Friends</string>
    <string name="tab_camera">Camera</string>
    <string name="tab_attachments">Attach</string>
    <string name="tab_settings">Settings</string>

    <string-array name="profile_yourself_options">
        <item name="opt_follow">Follow</item>
        <item name="opt_message">Message</item>
        <item name="opt_edit_profile">Edit profile</item>
        <item name="opt_show_on_map">Show on map</item>
    </string-array>
    <string name="message">message</string>
    
    <string-array name="profile_stranger_options">
        <item name="opt_chat">Chat</item>
    </string-array>

    <string name="pick_photo_camera">Create photo by camera</string>
    <string name="pick_photo_gallery">Pick photo from gallery</string>
    <string-array name="pick_photo">
        <item name="pick_camera">@string/pick_photo_camera</item>
        <item name="pick_gallery">@string/pick_photo_gallery</item>
    </string-array>

    <string name="post_opt_edit">Edit post</string>
    <string name="post_opt_delete">Delete post</string>
    <string-array name="post_options">
        <!--<item name="opt_edit">@string/post_opt_edit</item>-->
        <item name="opt_delete">@string/post_opt_delete</item>
    </string-array>

    <string name="transition_user_avatar">TRANSITION_USER_AVATAR</string>
    <string name="transition_chat_avatar">TRANSITION_CHAT_AVATAR</string>

    <string name="no_users">There are no users registered currently...</string>
    <string name="no_followers">You have no followers</string>
    <string name="no_following">You are not following anyone</string>
    <string name="no_friends">You have no friends</string>
    
    <string name="google_client_id">568185669722-4o18jpcsav47fa23e8tten89h7j48ji5.apps.googleusercontent.com</string>
</resources>
